@startuml
title ER Diagram: POTMS System
hide circle
skinparam linetype ortho

' --- Entities Definition ---

entity "User (ผู้ใช้งานระบบ)" as User {
  *user_id : INT <<PK>>
  --
  username : VARCHAR
  password : VARCHAR
  full_name : VARCHAR
  role : ENUM (Officer, User, Committee)
  department : VARCHAR
}

entity "Project (โครงการ)" as Project {
  *project_id : INT <<PK>>
  --
  *created_by : INT <<FK>>
  project_name : VARCHAR
  ubufmis_code : VARCHAR
  total_budget : DECIMAL(15,2)
  reserved_budget : DECIMAL(15,2)
  remaining_budget : DECIMAL(15,2)
  start_date : DATETIME
  end_date : DATETIME
  status : ENUM (Draft, Active, Closed)
}

entity "Project_Participant (ผู้เข้าร่วมโครงการ)" as Participant {
  *project_id : INT <<PK, FK>>
  *user_id : INT <<PK, FK>>
  --
  role_in_project : ENUM (Requester, Committee)
}

entity "Purchase_Order (ใบสั่งซื้อหลัก)" as PO {
  *order_id : INT <<PK>>
  --
  *project_id : INT <<FK>>
  *requester_id : INT <<FK>>
  *approver_id : INT <<FK, Nullable>>
  order_no : VARCHAR
  total_amount : DECIMAL(15,2)
  reason : TEXT
  created_at : DATETIME
  status : ENUM (Draft, Reserved, Pending_Approval, Approved, Rejected, Completed)
}

entity "Order_Item (รายการวัสดุ)" as Item {
  *item_id : INT <<PK>>
  --
  *order_id : INT <<FK>>
  material_name : VARCHAR
  quantity : INT
  unit_price : DECIMAL(10,2)
  total_price : DECIMAL(15,2)
}

entity "Partial_Receive (ใบรับของ/ใบเสร็จ)" as PartialReceive {
  *receive_id : INT <<PK>>
  --
  *order_id : INT <<FK>>
  *recorded_by : INT <<FK>>
  receipt_no : VARCHAR
  receipt_file_path : VARCHAR (PDF/JPG)
  received_date : DATETIME
  status : ENUM (Pending_Inspection, Inspected)
}

entity "Inspection (ผลการตรวจรับ)" as Inspection {
  *inspection_id : INT <<PK>>
  --
  *receive_id : INT <<FK>>
  *committee_id : INT <<FK>>
  inspection_date : DATETIME
  result : ENUM (Pass, Reject)
  comment : TEXT
}

entity "Payment (การเบิกจ่าย)" as Payment {
  *payment_id : INT <<PK>>
  --
  *project_id : INT <<FK>>
  *related_order_id : INT <<FK>>
  amount_paid : DECIMAL(15,2)
  payment_date : DATETIME
  status : ENUM (Processing, Paid)
}

' --- Relationships ---

' User relationships
User ||..o{ Project : "creates (Officer)"
User ||..o{ Participant : "is assigned to"
User ||..o{ PO : "creates (User)"
User ||..o{ Inspection : "inspects (Committee)"

' Project relationships
Project ||..|{ Participant : "has members"
Project ||..o{ PO : "contains orders"
Project ||..o{ Payment : "has payments"

' Order relationships
PO ||..|{ Item : "has items"
PO ||..o{ PartialReceive : "has deliveries (Partial)"
PO ||..o{ Payment : "is paid via"

' Sub-process relationships
PartialReceive ||..|| Inspection : "has one result"

@enduml